src/com/rapidminer/operator/modelling/converters/thebeast/parser/TheBeastMLNGrammarParser.java
// Generated from TheBeastMLNGrammar.g4 by ANTLR 4.2
package com.rapidminer.operator.modelling.converters.thebeast.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class TheBeastMLNGrammarParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		LINE_COMMENT=1, COMMENT=2, WS=3, NL=4, LP=5, RP=6, LCP=7, RCP=8, LSP=9, 
		RSP=10, DOTS=11, DOT=12, COL=13, COM=14, SCOL=15, EXCL=16, BAR=17, AND=18, 
		OR=19, IMPLIES=20, IFF=21, U_QUANT=22, E_QUANT=23, EQ=24, PLUS=25, STAR=26, 
		GT=27, LT=28, GE=29, LE=30, NE=31, MINUS=32, SLASH=33, MOD=34, ARROW=35, 
		INT=36, FLOAT=37, TYPE=38, INTLABEL=39, DOUBLELABEL=40, PREDICATE=41, 
		X=42, LEQLABEL=43, GEQLABEL=44, EQLABEL=45, UNDEFINEDLABEL=46, OBSERVED=47, 
		HIDDEN=48, GLOBAL=49, ADDFUNC=50, TRUELABEL=51, FALSELABEL=52, MINUSFUNC=53, 
		PRODUCTFUNC=54, DOUBLEFUNC=55, ABSFUNC=56, BINSFUNC=57, WEIGHTLABEL=58, 
		FACTORLABEL=59, FORLABEL=60, IFLABEL=61, ACYCLICLABEL=62, GROUNDALL=63, 
		LOADLABEL=64, FROMLABEL=65, CORPUSLABEL=66, SAVELABEL=67, TYPESLABEL=68, 
		TOLABEL=69, GLOBALLABEL=70, PRINTLABEL=71, ATOMSLABEL=72, WEIGHTSLABEL=73, 
		RAMLABEL=74, COLLECTLABEL=75, INSTANCESLABEL=76, INCLUDELABEL=77, EVALLABEL=78, 
		NEXTLABEL=79, EPOCHSLABEL=80, LEARNLABEL=81, DUMPLABEL=82, GROUNDALLLABEL=83, 
		SETLABEL=84, VAR_ID=85, CONST_ID=86, STRING=87;
	public static final String[] tokenNames = {
		"<INVALID>", "LINE_COMMENT", "COMMENT", "WS", "NL", "'('", "')'", "'{'", 
		"'}'", "'['", "']'", "'...'", "'.'", "':'", "','", "';'", "'!'", "BAR", 
		"'&'", "OR", "'=>'", "'<=>'", "U_QUANT", "E_QUANT", "'='", "'+'", "'*'", 
		"'>'", "'<'", "'>='", "'<='", "'!='", "'-'", "'/'", "'%'", "'->'", "INT", 
		"FLOAT", "'type'", "'Int'", "'Double'", "'predicate'", "'x'", "'leq'", 
		"'geq'", "'eq'", "'undefined'", "'observed'", "'hidden'", "GLOBAL", "'add'", 
		"'true'", "'false'", "'minus'", "'product'", "'double'", "'abs'", "'bins'", 
		"'weight'", "'factor'", "'for'", "'if'", "'acyclic'", "GROUNDALL", "'load'", 
		"'from'", "'corpus'", "'save'", "'types'", "'to'", "GLOBALLABEL", "'print'", 
		"'atoms'", "'weights'", "'ram'", "'collect'", "'instances'", "'include'", 
		"'eval'", "'next'", "'epochs'", "'learn'", "'dump'", "GROUNDALLLABEL", 
		"'set'", "VAR_ID", "CONST_ID", "STRING"
	};
	public static final int
		RULE_ruleFile = 0, RULE_dbFile = 1, RULE_constant = 2, RULE_variable = 3, 
		RULE_term = 4, RULE_typedVariableList = 5, RULE_typeLabel = 6, RULE_typeDefinition = 7, 
		RULE_type = 8, RULE_predicateLabel = 9, RULE_predicateDefinition = 10, 
		RULE_predicate = 11, RULE_predicateCategory = 12, RULE_predicateCategoryDefinition = 13, 
		RULE_prefixFunction = 14, RULE_infixFunction = 15, RULE_weightFunction = 16, 
		RULE_weightFunctionDefinition = 17, RULE_weightFunctionApplication = 18, 
		RULE_groundAtomValue = 19, RULE_groundAtomDefinitionRow = 20, RULE_groundAtomDefinition = 21, 
		RULE_possibleWorld = 22, RULE_functionApplication = 23, RULE_builtinPredicate = 24, 
		RULE_weightTerm = 25, RULE_quantification = 26, RULE_booleanFormula = 27, 
		RULE_formulaName = 28, RULE_order = 29, RULE_weightedFormulaSplit = 30, 
		RULE_weightedFormulaUnsplit = 31, RULE_weightedFormulaAcyclic = 32, RULE_weightedFormula = 33, 
		RULE_operationInstruction = 34, RULE_file = 35, RULE_path = 36, RULE_setValue = 37, 
		RULE_setStatement = 38, RULE_loadStatement = 39, RULE_saveStatement = 40, 
		RULE_printStatement = 41, RULE_typeStatement = 42, RULE_collectStatement = 43, 
		RULE_includeStatement = 44, RULE_nextStatement = 45, RULE_learnStatement = 46;
	public static final String[] ruleNames = {
		"ruleFile", "dbFile", "constant", "variable", "term", "typedVariableList", 
		"typeLabel", "typeDefinition", "type", "predicateLabel", "predicateDefinition", 
		"predicate", "predicateCategory", "predicateCategoryDefinition", "prefixFunction", 
		"infixFunction", "weightFunction", "weightFunctionDefinition", "weightFunctionApplication", 
		"groundAtomValue", "groundAtomDefinitionRow", "groundAtomDefinition", 
		"possibleWorld", "functionApplication", "builtinPredicate", "weightTerm", 
		"quantification", "booleanFormula", "formulaName", "order", "weightedFormulaSplit", 
		"weightedFormulaUnsplit", "weightedFormulaAcyclic", "weightedFormula", 
		"operationInstruction", "file", "path", "setValue", "setStatement", "loadStatement", 
		"saveStatement", "printStatement", "typeStatement", "collectStatement", 
		"includeStatement", "nextStatement", "learnStatement"
	};

	@Override
	public String getGrammarFileName() { return "TheBeastMLNGrammar.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TheBeastMLNGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class RuleFileContext extends ParserRuleContext {
		public List<TerminalNode> NL() { return getTokens(TheBeastMLNGrammarParser.NL); }
		public List<WeightFunctionDefinitionContext> weightFunctionDefinition() {
			return getRuleContexts(WeightFunctionDefinitionContext.class);
		}
		public PredicateDefinitionContext predicateDefinition(int i) {
			return getRuleContext(PredicateDefinitionContext.class,i);
		}
		public List<OperationInstructionContext> operationInstruction() {
			return getRuleContexts(OperationInstructionContext.class);
		}
		public List<WeightedFormulaContext> weightedFormula() {
			return getRuleContexts(WeightedFormulaContext.class);
		}
		public List<PredicateDefinitionContext> predicateDefinition() {
			return getRuleContexts(PredicateDefinitionContext.class);
		}
		public WeightFunctionDefinitionContext weightFunctionDefinition(int i) {
			return getRuleContext(WeightFunctionDefinitionContext.class,i);
		}
		public TerminalNode NL(int i) {
			return getToken(TheBeastMLNGrammarParser.NL, i);
		}
		public OperationInstructionContext operationInstruction(int i) {
			return getRuleContext(OperationInstructionContext.class,i);
		}
		public WeightedFormulaContext weightedFormula(int i) {
			return getRuleContext(WeightedFormulaContext.class,i);
		}
		public RuleFileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ruleFile; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TheBeastMLNGrammarListener ) ((TheBeastMLNGrammarListener)listener).enterRuleFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TheBeastMLNGrammarListener ) ((TheBeastMLNGrammarListener)listener).exitRuleFile(this);
		}
	}

	public final RuleFileContext ruleFile() throws RecognitionException {
		RuleFileContext _localctx = new RuleFileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_ruleFile);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					{
					{
					setState(94); match(NL);
					}
					} 
				}
				setState(99);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(105); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(105);
				switch (_input.LA(1)) {
				case LOADLABEL:
				case SAVELABEL:
				case TYPESLABEL:
				case PRINTLABEL:
				case COLLECTLABEL:
				case INCLUDELABEL:
				case NEXTLABEL:
				case LEARNLABEL:
				case SETLABEL:
					{
					setState(100); operationInstruction();
					}
					break;
				case WEIGHTLABEL:
					{
					setState(101); weightFunctionDefinition();
					}
					break;
				case PREDICATE:
					{
					setState(102); predicateDefinition();
					}
					break;
				case FACTORLABEL:
					{
					setState(103); weightedFormula();
					}
					break;
				case NL:
					{
					setState(104); match(NL);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(107); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NL) | (1L << PREDICATE) | (1L << WEIGHTLABEL) | (1L << FACTORLABEL))) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & ((1L << (LOADLABEL - 64)) | (1L << (SAVELABEL - 64)) | (1L << (TYPESLABEL - 64)) | (1L << (PRINTLABEL - 64)) | (1L << (COLLECTLABEL - 64)) | (1L << (INCLUDELABEL - 64)) | (1L << (NEXTLABEL - 64)) | (1L << (LEARNLABEL - 64)) | (1L << (SETLABEL - 64)))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DbFileContext extends ParserRuleContext {
		public List<TerminalNode> NL() { return getTokens(TheBeastMLNGrammarParser.NL); }
		public PossibleWorldContext possibleWorld(int i) {
			return getRuleContext(PossibleWorldContext.class,i);
		}
		public List<PossibleWorldContext> possibleWorld() {
			return getRuleContexts(PossibleWorldContext.class);
		}
		public TerminalNode NL(int i) {
			return getToken(TheBeastMLNGrammarParser.NL, i);
		}
		public DbFileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dbFile; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TheBeastMLNGrammarListener ) ((TheBeastMLNGrammarListener)listener).enterDbFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TheBeastMLNGrammarListener ) ((TheBeastMLNGrammarListener)listener).exitDbFile(this);
		}
	}

	public final DbFileContext dbFile() throws RecognitionException {
		DbFileContext _localctx = new DbFileContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_dbFile);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(109); possibleWorld();
			setState(118);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					{
					{
					setState(111); 
					_errHandler.sync(this);
					_la = _input.LA(1);
					do {
						{
						{
						setState(110); match(NL);
						}
						}
						setState(113); 
						_errHandler.sync(this);
						_la = _input.LA(1);
					} while ( _la==NL );
					setState(115); possibleWorld();
					}
					} 
				}
				setState(120);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			setState(122);
			_la = _input.LA(1);
			if (_la==NL) {
				{
				setState(121); match(NL);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstantContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(TheBeastMLNGrammarParser.STRING, 0); }
		public TerminalNode CONST_ID() { return getToken(TheBeastMLNGrammarParser.CONST_ID, 0); }
		public ConstantContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constant; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TheBeastMLNGrammarListener ) ((TheBeastMLNGrammarListener)listener).enterConstant(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TheBeastMLNGrammarListener ) ((TheBeastMLNGrammarListener)listener).exitConstant(this);
		}
	}

	public final ConstantContext constant() throws RecognitionException {
		ConstantContext _localctx = new ConstantContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_constant);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			_la = _input.LA(1);
			if ( !(_la==CONST_ID || _la==STRING) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableContext extends ParserRuleContext {
		public TerminalNode VAR_ID() { return getToken(TheBeastMLNGrammarParser.VAR_ID, 0); }
		public VariableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TheBeastMLNGrammarListener ) ((TheBeastMLNGrammarListener)listener).enterVariable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TheBeastMLNGrammarListener ) ((TheBeastMLNGrammarListener)listener).exitVariable(this);
		}
	}

	public final VariableContext variable() throws RecognitionException {
		VariableContext _localctx = new VariableContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_variable);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126); match(VAR_ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TermContext extends ParserRuleContext {
		public TerminalNode RP() { return getToken(TheBeastMLNGrammarParser.RP, 0); }
		public ConstantContext constant() {
			return getRuleContext(ConstantContext.class,0);
		}
		public List<TermContext> term() {
			return getRuleContexts(TermContext.class);
		}
		public TermContext term(int i) {
			return getRuleContext(TermContext.class,i);
		}
		public List<TerminalNode> COM() { return getTokens(TheBeastMLNGrammarParser.COM); }
		public WeightFunctionApplicationContext weightFunctionApplication() {
			return getRuleContext(WeightFunctionApplicationContext.class,0);
		}
		public TerminalNode LP() { return getToken(TheBeastMLNGrammarParser.LP, 0); }
		public BuiltinPredicateContext builtinPredicate() {
			return getRuleContext(BuiltinPredicateContext.class,0);
		}
		public TerminalNode COM(int i) {
			return getToken(TheBeastMLNGrammarParser.COM, i);
		}
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public PredicateContext predicate() {
			return getRuleContext(PredicateContext.class,0);
		}
		public TermContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_term; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TheBeastMLNGrammarListener ) ((TheBeastMLNGrammarListener)listener).enterTerm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TheBeastMLNGrammarListener ) ((TheBeastMLNGrammarListener)listener).exitTerm(this);
		}
	}

	public final TermContext term() throws RecognitionException {
		return term(0);
	}

	private TermContext term(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		TermContext _localctx = new TermContext(_ctx, _parentState);
		TermContext _prevctx = _localctx;
		int _startState = 8;
		enterRecursionRule(_localctx, 8, RULE_term, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				{
				setState(129); constant();
				}
				break;

			case 2:
				{
				setState(130); variable();
				}
				break;

			case 3:
				{
				{
				setState(131); predicate();
				setState(132); match(LP);
				setState(133); term(0);
				setState(138);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COM) {
					{
					{
					setState(134); match(COM);
					setState(135); term(0);
					}
					}
					setState(140);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(141); match(RP);
				}
				}
				break;

			case 4:
				{
				setState(143); weightFunctionApplication();
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(152);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new TermContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_term);
					setState(146);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
					setState(147); builtinPredicate();
					setState(148); term(3);
					}
					} 
				}
				setState(154);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class TypedVariableListContext extends ParserRuleContext {
		public List<TerminalNode> COM() { return getTokens(TheBeastMLNGrammarParser.COM); }
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public VariableContext variable(int i) {
			return getRuleContext(VariableContext.class,i);
		}
		public TerminalNode COM(int i) {
			return getToken(TheBeastMLNGrammarParser.COM, i);
		}
		public List<VariableContext> variable() {
			return getRuleContexts(VariableContext.class);
		}
		public TypedVariableListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typedVariableList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TheBeastMLNGrammarListener ) ((TheBeastMLNGrammarListener)listener).enterTypedVariableList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TheBeastMLNGrammarListener ) ((TheBeastMLNGrammarListener)listener).exitTypedVariableList(this);
		}
	}

	public final TypedVariableListContext typedVariableList() throws RecognitionException {
		TypedVariableListContext _localctx = new TypedVariableListContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_typedVariableList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(155); type();
			setState(156); variable();
			setState(163);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COM) {
				{
				{
				setState(157); match(COM);
				setState(158); type();
				setState(159); variable();
				}
				}
				setState(165);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeLabelContext extends ParserRuleContext {
		public TerminalNode CONST_ID() { return getToken(TheBeastMLNGrammarParser.CONST_ID, 0); }
		public TypeLabelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeLabel; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TheBeastMLNGrammarListener ) ((TheBeastMLNGrammarListener)listener).enterTypeLabel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TheBeastMLNGrammarListener ) ((TheBeastMLNGrammarListener)listener).exitTypeLabel(this);
		}
	}

	public final TypeLabelContext typeLabel() throws RecognitionException {
		TypeLabelContext _localctx = new TypeLabelContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_typeLabel);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(166); match(CONST_ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeDefinitionContext extends ParserRuleContext {
		public TerminalNode SCOL() { return getToken(TheBeastMLNGrammarParser.SCOL, 0); }
		public List<ConstantContext> constant() {
			return getRuleContexts(ConstantContext.class);
		}
		public TerminalNode DOTS() { return getToken(TheBeastMLNGrammarParser.DOTS, 0); }
		public List<TerminalNode> COM() { return getTokens(TheBeastMLNGrammarParser.COM); }
		public TerminalNode TYPE() { return getToken(TheBeastMLNGrammarParser.TYPE, 0); }
		public TypeLabelContext typeLabel() {
			return getRuleContext(TypeLabelContext.class,0);
		}
		public TerminalNode COL() { return getToken(TheBeastMLNGrammarParser.COL, 0); }
		public TerminalNode COM(int i) {
			return getToken(TheBeastMLNGrammarParser.COM, i);
		}
		public ConstantContext constant(int i) {
			return getRuleContext(ConstantContext.class,i);
		}
		public TypeDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeDefinition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TheBeastMLNGrammarListener ) ((TheBeastMLNGrammarListener)listener).enterTypeDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TheBeastMLNGrammarListener ) ((TheBeastMLNGrammarListener)listener).exitTypeDefinition(this);
		}
	}

	public final TypeDefinitionContext typeDefinition() throws RecognitionException {
		TypeDefinitionContext _localctx = new TypeDefinitionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_typeDefinition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(168); match(TYPE);
			setState(169); typeLabel();
			setState(170); match(COL);
			setState(180);
			switch (_input.LA(1)) {
			case DOTS:
				{
				setState(171); match(DOTS);
				}
				break;
			case CONST_ID:
			case STRING:
				{
				{
				setState(172); constant();
				setState(177);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COM) {
					{
					{
					setState(173); match(COM);
					setState(174); constant();
					}
					}
					setState(179);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(182); match(SCOL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
